# hive

./: Cargo.toml  LICENSE  README.md
src/: config.rs  dock.rs  hooks.rs  jump.rs  main.rs  picker.rs  session.rs  stats.rs  status.rs  tmux.rs  watcher.rs  worktree.rs
src/voice/: capture.rs  dispatch.rs  hold.rs  intent.rs  mod.rs  stt.rs
