[package]
name = "hive"
version = "0.1.0"
edition = "2024"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Config
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"

# Shared
anyhow = "1"
serde_json = "1"

# Picker TUI
ratatui = "0.29"
crossterm = "0.28"
nucleo = "0.5"

# Watcher overlay
x11rb = { version = "0.13", features = ["shape"] }
cairo-rs = { version = "0.20", features = [] }
notify = "7"

# Process management
libc = "0.2"
