[package]
name = "hive"
version = "0.1.0"
edition = "2024"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Config
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "6"

# Shared
anyhow = "1"
serde_json = "1"

# Picker TUI
ratatui = "0.30"
crossterm = "0.29"
nucleo = "0.5"

# Watcher overlay
x11rb = { version = "0.13", features = ["shape"] }
cairo-rs = { version = "0.22", features = [] }
notify = "8.2"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Process management
libc = "0.2"

# Voice (opt-in via --features voice)
whisper-rs = { version = "0.16", optional = true }
cpal = { version = "0.15", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
evdev = { version = "0.12", optional = true }

[features]
default = []
voice = ["dep:whisper-rs", "dep:cpal", "dep:evdev"]
voice-cuda = ["voice", "whisper-rs/cuda"]
voice-vulkan = ["voice", "whisper-rs/vulkan"]
voice-hipblas = ["voice", "whisper-rs/hipblas"]
voice-openblas = ["voice", "whisper-rs/openblas"]
voice-metal = ["voice", "whisper-rs/metal"]
voice-coreml = ["voice", "whisper-rs/coreml"]
